# aoc2024

./: .gitignore
day01/: solve.py
day02/: solve.py
day04/: solve.py
day05/: solve.py
day06/: solve.py
day07/: solve.py
mcp_server/: .gitignore  README.md  pyproject.toml
mcp_server/src/aoc/: run_script.py  server.py
utils/: __init__.py  aoc_client.py
